--- a/slot-machine.css
+++ b/slot-machine.css
@@ -4,8 +4,9 @@ h1{
 }
 #container{
   width: 20%;
-  color: white;
   margin: 0 auto;
+  border: 1px solid black;
+  background-color: white;
 }
 body{
   background-color: black;
